// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package user;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.user.grpc";
option java_outer_classname = "UserLocationProto";
option objc_class_prefix = "USRLOC";

import "common/common.proto";

// The userlocation service definition.
service UserLocation {

    rpc UpdateMyLocation (UpdateMyLocationRequest) returns (UpdateMyLocationResponse) {
    }

}

message UpdateMyLocationRequest {
    double lat = 30;
    double lon = 31;
}

message UpdateMyLocationResponse {
    common.Status status = 999;
}
